syntax = "proto3";

package rivet.backend.pkg.cluster.server_resolve_for_ip;

import "proto/common.proto";
import "proto/backend/cluster.proto";

message Request {
	repeated string ips = 1;
}

message Response {
	message Server {
		string public_ip = 1;
		rivet.common.Uuid server_id = 2;
	}

	repeated Server servers = 1;
}
